--- a/config/mycommand.sty
+++ b/config/mycommand.sty
@@ -79,7 +79,14 @@
 \newcommand{\eqv}{\ensuremath{\mathrm{eqv}}}
 \newcommand{\cge}{\ensuremath{\mathrm{cge}}}
 \newcommand{\nor}{\ensuremath{\mathrm{nor}}}
+\newcommand{\minimal}{\operatorname{min}}
+\newcommand{\minimum}{\operatorname{min^{\ast}}}
+\newcommand{\maximal}{\operatorname{max}}
+\newcommand{\maximum}{\operatorname{max^{\ast}}}
+\newcommand{\re}{\operatorname{re}}
 \newcommand{\idm}{\operatorname{idm}}
+\newcommand{\idx}{\operatorname{idx}}
+\newcommand{\prd}{\operatorname{prd}}
 \newcommand{\Idl}{\operatorname{Idl}}
 \newcommand{\Ldl}{\operatorname{Ldl}}
 \newcommand{\Rdl}{\operatorname{Rdl}}
